fix ugly spacing on tech used section

--- a/css/style.css
+++ b/css/style.css
@@ -523,8 +523,12 @@ header {
 }
 #technologies-used {
   background-color: #eeefee;
-  padding: 4px 8px 16px 8px;
+  padding: 35px 8px 50px 8px;
   text-align: center;
+}
+#technologies-used > h3 {
+  margin-bottom: 45px;
+  font-size: 2rem;
 }
 .technologies {
   margin: auto;
